# c_in_python

./: .gitignore  CMakeLists.txt  IntTable.c  IntTable.h  README.md  c_and_python.ipynb  main.py  requirement.txt  requirements.txt  sum_betwenn_min_max_array.ipynb  test.ipynb  test.py
